# babaisyou

./: .gitignore  Baba Is You UML.mdj  README.md
baba_is_you/: CMakeLists.txt  main.cpp
remise_01/: Baba Is You UML.mdj
remise_02/BabaIsYou/src/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  text_view.cpp  text_view.h  util.cpp  view.h
remise_02/BabaIsYou/src/levels/: level_3.txt
remise_02/BabaIsYou/src/model/: element.h  game.cpp  game.h  gameobject.cpp  levelloader.cpp  levelmechanics.cpp  levelmechanics.h  observable.h  observer.h  position.h  rulemanager.cpp  rulemanager.h
remise_02/BabaIsYou/tests/: CMakeLists.txt  testLevelLoader.cpp  testLevelMechanics.cpp  testPosition.cpp  testRuleManager.cpp
remise_02/ProjectStructure/src/: CMakeLists.txt  controller.cpp  controller.h  level_0.txt  level_1.txt  level_3.txt  main.cpp  resources.qrc  text_view.cpp  util.cpp  view.h
remise_02/ProjectStructure/src/levels/: level_5.txt
remise_02/ProjectStructure/src/model/: LevelLoader.h  game.cpp  game.h  gameobject.cpp  gameobject.h  level.h  levelloader.cpp  levelmechanics.cpp  levelmechanics.h  observable.h  observer.h  position.cpp  position.h  rulemanager.cpp  rulemanager.h
remise_02/ProjectStructure/src/saves/: fef.txt
remise_02/ProjectStructure/tests/: CMakeLists.txt  level_0.txt  level_2.txt  level_4.txt  testLevelLoader.cpp  testLevelMechanics.cpp  testPosition.cpp  testRuleManager.cpp
remise_02/baba_is_you/build-src-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
remise_02/baba_is_you/build-src-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
remise_02/baba_is_you/src/: CMakeLists.txt
remise_02/baba_is_you/src/model/: LevelLoader.h  game.h  gameobject.h  levelmechanics.h  position.h  rulemanager.h
remise_02/build-ProjectStructure-Qt_6_4_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
remise_02/build-ProjectStructure-Qt_6_4_1_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-d7df7000ba902855e8ed.json  cmakeFiles-v1-5a7b268ce629ec3826cb.json  codemodel-v2-21d132c579b318c1a4ad.json  directory-_deps.catch2-build-Debug-42cbf075ac6dc46482a8.json  directory-_deps.catch2-build.src-Debug-3557ab9c80e6462df024.json  directory-src-Debug-766bc8b6a876d259dcfb.json  index-2023-03-12T18-00-40-0584.json  target-Catch2-Debug-88ba2bbd7029f19b68d2.json  target-Catch2WithMain-Debug-0f2e1749ed963de10771.json  target-ProjectStructure-Debug-a48dfe737ecd1ed6ea8a.json  target-ProjectStructureTests-Debug-d96cf84377ab37cff1d0.json
remise_02/build-ProjectStructure-Qt_6_4_1_for_macOS-Debug/.qtc_clangd/: compile_commands.json
remise_02/build-ProjectStructure-Qt_6_4_1_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: LevelLoader.h.FABF974ECF92C9DD.idx  __bit_reference.4565313E7DC9CBCF.idx  __locale.2D32E9862A6228BF.idx  __mutex_base.B72617C8B799451C.idx  __node_handle.299D820E3B884B85.idx  __split_buffer.77E78806F3F1FAD8.idx  __stddef_max_align_t.h.9D061BC8D8EA1C30.idx  __string.8AD3A849C9B276BC.idx  __tree.4FDECFDE0652E82D.idx  _symbol_aliasing.h.1A5B15305E55B8B0.idx  adjacent_find.h.621F9FCBA1A24D08.idx  all_of.h.61FF6AB6960D2E01.idx  any_of.h.5672DE2D9D746B7B.idx  array.7FAD4C5987242955.idx  binary_search.h.B91FC161A68A2F40.idx  bitset.8EE298DA0BB5C2B3.idx  cassert.ED5B80B0361134F5.idx  catch_all.hpp.0B9B10919D971876.idx  catch_analyse.hpp.AB0E7B780C766ED0.idx  catch_approx.cpp.40EAC6E9CB421C3C.idx  catch_approx.hpp.D9068ADC117D5566.idx  catch_assertion_handler.cpp.C345D832A56FD329.idx  catch_assertion_handler.hpp.F2BF57AA972DF6C0.idx  catch_assertion_info.hpp.C3C4EC2FEF617429.idx  catch_assertion_result.cpp.8DD41F64CBB28952.idx  catch_assertion_result.hpp.CCE1AFDD34283656.idx  catch_benchmark.hpp.513131DC133CDEFB.idx  catch_benchmark_all.hpp.EBE44F9540E3729B.idx  catch_benchmark_function.cpp.77D598C82C7118C8.idx  catch_benchmark_function.hpp.72B4DEFB9791B826.idx  catch_case_insensitive_comparisons.cpp.34ED510251652D2C.idx  catch_clara.cpp.2A465664B51AE403.idx  (+375 more)
remise_02/build-ProjectStructure-Qt_6_4_1_for_macOS-Debug/src/: ProjectStructure  cmake_install.cmake
remise_02/build-ProjectStructure-Qt_6_4_1_for_macOS-Debug/tests/: cmake_install.cmake
remise_02/levels/empty_levels/: level_0.txt  level_1.txt  level_2.txt  level_3.txt  level_4.txt
remise_03/BabaIsYou/src/: CMakeLists.txt  consolecontroller.h  guiaccueil.ui  guicontroller.cpp  guicontroller.h  guiview.cpp  guiview.h  guiview.ui  helpview.ui  main.cpp  menuview.ui  textview.cpp  textview.h  util.cpp  wonview.ui
remise_03/BabaIsYou/src/levels/: level_5.txt
remise_03/BabaIsYou/src/levels/saves/: .txt  final.txt
remise_03/BabaIsYou/src/model/: element.h  game.h  gameobject.cpp  gameobject.h  level.h  levelloader.cpp  levelloader.h  levelmechanics.cpp  levelmechanics.h  observable.h  observer.h  rulemanager.cpp
remise_03/BabaIsYou/src/sprites/: spritesheet.psb
remise_03/BabaIsYou/src/views/: guiaccueil.cpp  guiaccueil.h  guiview.cpp  guiview.h  helpview.cpp  menuview.cpp  menuview.h  textview.cpp  wonview.cpp  wonview.h
remise_03/BabaIsYou/tests/: CMakeLists.txt
src/: consolecontroller.cpp  helpview.ui  menuview.ui
src/levels/: level_2.txt
src/model/: direction.h  game.cpp  levelmechanics.cpp  observer.h
src/views/: guiview.cpp  guiview.h  helpview.cpp  menuview.h  textview.cpp  textview.h
tests/: testLevelLoader.cpp  testRuleManager.cpp
(+79 files in other folders)
